@@ -33,6 +33,7 @@ PLUGIN_DEPENDENCIES     = \
   LSP_PLUGINS_DYNA_PROCESSOR \
   LSP_PLUGINS_EXPANDER \
   LSP_PLUGINS_GATE \
+  LSP_PLUGINS_GOTT_COMPRESSOR \
   LSP_PLUGINS_GRAPH_EQUALIZER \
   LSP_PLUGINS_IMPULSE_RESPONSES \
   LSP_PLUGINS_IMPULSE_REVERB \
